--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https://wallpapercave.com/wp/wp6451487.jpg');
+    background-image: url('bgimg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-color: rgba(255, 255, 255, 0.5);
